# drawShpWithOpengl

./: CMakeLists.txt  RES.qrc  crsfile.cpp  crsfile.h  crsfilemodel.cpp  crsfilemodel.h  crsmanager.cpp  crsmanager.h  gisview.cpp  gisview.h  main.cpp  mainwindow.cpp  mainwindow.h
shaders/: edge.vert  tri.frag
